translations for all categories

--- a/config/locales/draper.en.yml
+++ b/config/locales/draper.en.yml
@@ -2,3 +2,6 @@ en:
   draper:
     categories:
       sport: "Sport"
+      health: "Health"
+      tech: "Technology"
+      lifehacks: "Lifehacks"
