--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,8 @@ en:
       categories: "Categories"
 
   posts:
+    show:
+      comments: "Comments"
     index:
       categories: "Categories"
 
