auto-unsubscribing link in announce email

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -59,3 +59,9 @@ en:
       categories: "Categories"
       unsubscribe: "Unsubscribe"
       subscriptions: "Subscriptions"
+
+  users:
+    unsubscribe:
+      signed_unsubscribed: "You has been successfully unsubscribed from the new announcements!"
+      unsigned_unsubscribed: "Your account with the email %{email} has been successfully unsubscribed from the new announcements!"
+      invalid_link: "Sorry, invalid unsubscribe link."
