--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -54,6 +54,11 @@ en:
       send_instructions: "You will receive an email with instructions about how to unlock your account in a few minutes."
       send_paranoid_instructions: "If your account exists, you will receive an email with instructions about how to unlock it in a few minutes."
       unlocked: "Your account has been unlocked successfully. Please sign in to continue."
+
+    shared:
+      footer:
+        forgot_password: "Forgot your password?"
+        dont_receive_confirmation: "Didn't receive confirmation instructions?"
   errors:
     messages:
       already_confirmed: "was already confirmed, please try signing in"
