--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -3,6 +3,9 @@
 en:
   devise:
     confirmations:
+      new:
+        submit: "Submit"
+        resend_confirmation: "Resend confirmation instructions"
       confirmed: "Your account was successfully confirmed."
       confirmed_and_signed_in: "Your account was successfully confirmed. You are now signed in."
       send_instructions: "You will receive an email with instructions about how to confirm your account in a few minutes."
@@ -28,6 +31,10 @@ en:
       failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
       success: "Successfully authenticated from %{kind} account."
     passwords:
+      new:
+        email: "Email"
+        forgot_password: "Forgot password?"
+        submit: "Submit"
       no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
       send_instructions: "You will receive an email with instructions about how to reset your password in a few minutes."
       send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
